fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 html {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 body {
   margin: 0;
+  padding: 0;
+  width: 100vw;
   font-family: sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
